<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".FeedingScheme">

    <TextView
        android:id="@+id/feedingSchemeTitle"
        android:layout_width="245dp"
        android:layout_height="51dp"
        android:text="@string/feedingScheme"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/breakfastTime"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="144dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/_00_00"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toEndOf="@+id/breakfast"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/dinnerTime"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/_00_00"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/breakfast"
        android:layout_width="123dp"
        android:layout_height="36dp"
        android:text="@string/breakfast"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <EditText
        android:id="@+id/servingSize"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/baby_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/serving"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <TextView
        android:id="@+id/dinner"
        android:layout_width="123dp"
        android:layout_height="36dp"
        android:text="@string/dinner"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

    <Button
        android:id="@+id/lunchTime"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/_00_00"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toEndOf="@+id/lunch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <Button
        android:id="@+id/grams"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/g"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/servingSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:id="@+id/saveButton"
        style="?android:attr/buttonCornerRadius"
        android:layout_width="196dp"
        android:layout_height="54dp"
        android:layout_marginTop="46dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/lunch"
        android:layout_width="123dp"
        android:layout_height="36dp"
        android:text="@string/lunch"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/water"
        android:layout_width="174dp"
        android:layout_height="36dp"
        android:text="@string/water"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <ToggleButton
        android:id="@+id/waterChoice"
        android:layout_width="127dp"
        android:layout_height="49dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="45dp"
        android:textOff="@string/once_a_day"
        android:textOn="@string/all_day"
        android:textSize="15sp"
        android:textColor="@color/dark_grey"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="multiply"
        android:textColorLink="@color/baby_blue"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/water"
        app:layout_constraintTop_toBottomOf="@+id/grams"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/serving"
        android:layout_width="129dp"
        android:layout_height="37dp"
        android:text="@string/serving"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <Button
        android:id="@+id/backButton"
        style="?android:attr/buttonCornerRadius"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/feedingSchemeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        tools:targetApi="p" />


</androidx.constraintlayout.widget.ConstraintLayout>