<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="389dp"
        android:layout_height="85dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/snackInator"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:translationZ="90dp"
        app:layout_constraintBottom_toTopOf="@+id/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="351dp"
        android:layout_height="193dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/app_logo_image" />

    <Button
        android:id="@+id/validate"
        style="?android:attr/buttonCornerRadius"
        android:layout_width="196dp"
        android:layout_height="54dp"
        android:layout_marginTop="113dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/validate"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck"
        tools:targetApi="p" />

    <EditText
        android:id="@+id/code"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/baby_blue"
        android:ems="10"
        android:hint="@string/code"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/baby_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.22" />

</androidx.constraintlayout.widget.ConstraintLayout>